--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,202 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>KW Helper</title>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
-    </head>
-    <body>
-        <div class="notification">
-            <div class="notiglow"></div>
-            <div class="notiborderglow"></div>
-            <div class="notititle">{{ student_info.get('name') }} {{ student_info.get('uid') }}</div>
-            <div class="notibody">
-                {{ student_info.get('major') }}<br>
-                <span>Credits: {{ student_info.get('credits').get('total') }}/{{ student_info.get('credits').get('required') }} {{ '%.2f' % student_info.get('credits').get('ratio') }}%</span><br>
-                <span>Major Credits: {{ student_info.get('major_credits').get('total') }}/{{ student_info.get('major_credits').get('required') }} {{ '%.2f' % student_info.get('major_credits').get('ratio') }}%</span><br>
-                Elective Credits: {{ student_info.get('elective_credits').get('total') }}/{{ student_info.get('elective_credits').get('required') }}<br>
-                Average Score: {{ student_info.get('average_score') }}<br>
-                Credits for each semesters: {{ student_info.get('credits_for_each_semester') }}<br>
-                Major Credits for each semesters: {{ student_info.get('major_credits_for_each_semester') }}<br>
-            </div>
-          </div>
-    </body> 
+<head>
+<title>KW Helper</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+.w3-row-padding img {margin-bottom: 12px}
+/* Set the width of the sidebar to 120px */
+.w3-sidebar {width: 120px;background: #222;}
+/* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
+#main {margin-left: 120px}
+/* Remove margins from "page content" on small screens */
+@media only screen and (max-width: 600px) {
+  #main {
+    margin-left: 0;
+  }
+}
+</style>
+</head>
+<body class="w3-black">
+
+<!-- Icon Bar (Sidebar - hidden on small screens) -->
+<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
+  <!-- Avatar image in top left corner -->
+  <img src="{{ photo_url }}" style="width:100%">
+  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
+    <i class="fa fa-home w3-xxlarge"></i>
+    <p>HOME</p>
+  </a>
+  <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-user w3-xxlarge"></i>
+    <p>ABOUT</p>
+  </a>
+  <a href="#photos" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-eye w3-xxlarge"></i>
+    <p>LECTURES</p>
+  </a>
+  <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-envelope w3-xxlarge"></i>
+    <p>NOTICE</p>
+  </a>
+</nav>
+
+<!-- Navbar on small screens (Hidden on medium and large screens) -->
+<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
+  <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
+    <a href="#" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
+    <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ABOUT</a>
+    <a href="#photos" class="w3-bar-item w3-button" style="width:25% !important">PHOTOS</a>
+    <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
+  </div>
+</div>
+
+<!-- Page Content -->
+<div class="w3-padding-large" id="main">
+  <!-- Header/Home -->
+  <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
+    <h1 class="w3-jumbo"><span class="w3-hide-small">{{ student_info.get('name') }}</span></h1>
+    <h2> {{ student_info.get('major') }} </h2>
+    <p> {{ student_info.get('uid') }}</p>
+  </header>
+
+  <!-- About Section -->
+  <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
+    <h2 class="w3-text-light-grey">About you</h2>
+    <hr style="width:200px" class="w3-opacity">
+    <p> 
+      {{ student_info.get('major') }}<br>
+      <span>Credits: {{ student_info.get('credits').get('total') }}/{{ student_info.get('credits').get('required') }} {{ '%.2f' % student_info.get('credits').get('ratio') }}%</span><br>
+      <span>Major Credits: {{ student_info.get('major_credits').get('total') }}/{{ student_info.get('major_credits').get('required') }} {{ '%.2f' % student_info.get('major_credits').get('ratio') }}%</span><br>
+      Elective Credits: {{ student_info.get('elective_credits').get('total') }}/{{ student_info.get('elective_credits').get('required') }}<br>
+      Average Score: {{ student_info.get('average_score') }}<br>
+      Credits for each semesters: {{ student_info.get('credits_for_each_semester') }}<br>
+      Major Credits for each semesters: {{ student_info.get('major_credits_for_each_semester') }}<br>
+    </p>
+    <h3 class="w3-padding-16 w3-text-light-grey">My Credits</h3>
+    <p class="w3-wide">Full</p>
+    <div class="w3-white">
+      <div class="w3-dark-grey" style="height:28px; width:{{ student_info.get('credits', {}).get('ratio', 0) }}%;"></div>
+    </div>
+    <p class="w3-wide">Major</p>
+    <div class="w3-white">
+      <div class="w3-dark-grey" style="height:28px;width:{{ student_info.get('major_credits', {}).get('ratio', 0) }}%"></div>
+    </div>
+    <p class="w3-wide">Elective</p>
+    <div class="w3-white">
+      <div class="w3-dark-grey" style="height:28px;width:100%"></div>
+    </div><br>
+    
+    <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
+      <div class="w3-quarter w3-section">
+        <span class="w3-xlarge">{{ student_info.get('average_score') }}</span><br>
+        Average Score
+      </div>
+      <div class="w3-quarter w3-section">
+        <span class="w3-xlarge">{{ student_info.get('major_credits').get('total') }}</span><br>
+        Major Credits
+      </div>
+      <div class="w3-quarter w3-section">
+        <span class="w3-xlarge">{{ student_info.get('elective_credits').get('total') }}</span><br>
+        Elective Credits
+      </div>
+      <div class="w3-quarter w3-section">
+        <span class="w3-xlarge">{{ student_info.get('credits').get('total') }}</span><br>
+        Full Credits
+      </div>
+    </div>
+
+    <button class="w3-button w3-light-grey w3-padding-large w3-section">
+      <i class="fa fa-download"></i> Download Full File With My Credits
+    </button>
+    
+    <!-- Grid for pricing tables -->
+    <h3 class="w3-padding-16 w3-text-light-grey">Info</h3>
+    <div class="w3-row-padding" style="margin:0 -16px">
+      <div class="w3-half w3-margin-bottom">
+        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
+          <li class="w3-dark-grey w3-xlarge w3-padding-32">Before</li>
+          <li class="w3-padding-16">Class 1</li>
+          <li class="w3-padding-16">Class 2</li>
+          <li class="w3-padding-16">Class 3</li>
+          <li class="w3-padding-16">Class 4</li>
+        </ul>
+      </div>
+
+      <div class="w3-half">
+        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
+          <li class="w3-dark-grey w3-xlarge w3-padding-32">After</li>
+          <li class="w3-padding-16">Class 1</li>
+          <li class="w3-padding-16">Class 2</li>
+          <li class="w3-padding-16">Class 3</li>
+          <li class="w3-padding-16">Class 4</li>
+        </ul>
+      </div>
+    <!-- End Grid/Pricing tables -->
+    </div>
+  
+  <!-- End About Section -->
+  </div>
+  
+  <!-- Portfolio Section -->
+  <div class="w3-padding-64 w3-content" id="photos">
+    <h2 class="w3-text-light-grey">To Do</h2>
+    <hr style="width:200px" class="w3-opacity">
+
+    <!-- Grid for photos -->
+    <div class="w3-row-padding" style="margin:0 -16px">
+      <div class="w3-half">
+        <h5>You have 1 lectures to watch</h5>
+        <h5>You have 1 lectures to watch</h5>
+        <h5>You have 1 lectures to watch</h5>
+      </div>
+
+      <div class="w3-half">
+        <h5>You have 1 lectures to watch</h5>
+        <h5>You have 1 lectures to watch</h5>
+        <h5>You have 1 lectures to watch</h5>
+      </div>
+    <!-- End photo grid -->
+    </div>
+  <!-- End Portfolio Section -->
+  </div>
+
+  <!-- Contact Section -->
+  <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
+    <h2 class="w3-text-light-grey">Notice</h2>
+    <hr style="width:200px" class="w3-opacity">
+
+    <p>Click the button below to get a recent news.</p>
+
+    <form action="/action_page.php" target="_blank">
+      <p>
+        <button class="w3-button w3-light-grey w3-padding-large" type="submit">
+          <i class="fa fa-paper-plane"></i> GET NEWS
+        </button>
+      </p>
+    </form>
+  <!-- End Contact Section -->
+  </div>
+  
+    <!-- Footer -->
+  <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+    <p class="w3-medium">Powered by <a href="https://www.choidomin.com" target="_blank" class="w3-hover-text-green">choivadim</a></p>
+  <!-- End footer -->
+  </footer>
+
+<!-- END PAGE CONTENT -->
+</div>
+
+</body>
 </html>
