--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
     <!--Stylesheet-->
     <style media="screen">
+
       *,
 *:before,
 *:after{
@@ -132,6 +133,13 @@ button{
   margin-right: 4px;
 }
 
+@media only screen and (max-width: 600px) {
+    form {
+        height: 600px;
+        width: 90%;
+    }
+    
+}
     </style>
 </head>
 <body>
