--- a/templates/login.html
+++ b/templates/login.html
@@ -155,9 +155,9 @@ button{
 
         <label for="password">Password</label>
         <input type="password" placeholder="Password" id="password", name="password">
-        <label>
+        <p style="color: #f62323;">
             {% if error %} {{error}} {% endif %}
-        </label>
+        </p>
 
         <button type="submit">Log In</button>
     </form>
