--- a/templates/index.html
+++ b/templates/index.html
@@ -28,35 +28,38 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
   <img src="{{ photo_url }}" style="width:100%">
-  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
-    <i class="fa fa-home w3-xxlarge"></i>
-    <p>HOME</p>
-  </a>
-  <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  
+  <a href="{{ url_for('index') }}" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-user w3-xxlarge"></i>
     <p>ABOUT</p>
   </a>
-  <a href="#photos" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-eye w3-xxlarge"></i>
-    <p>LECTURES</p>
+  <a href="{{ url_for('todo') }}" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-tasks w3-xxlarge"></i>
+    <p>TODO</p>
   </a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="{{ url_for('chat') }}" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-envelope w3-xxlarge"></i>
-    <p>NOTICE</p>
+    <p>CHAT</p>
   </a>
-  <a href="{{ url_for('logout') }}" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="{{ url_for('faq') }}" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-question-circle w3-xxlarge"></i>
+    <p>FAQ</p>
+  </a>
+  <a href="{{ url_for('logout') }}" class="w3-bar-item w3-button w3-padding-large w3-hover-black" style="position: absolute; bottom: 0; width: 100%;">
     <i class="fa fa-sign-out w3-xxlarge"></i>
     <p>LOGOUT</p>
   </a>
+
+  
 </nav>
 
 <!-- Navbar on small screens (Hidden on medium and large screens) -->
 <div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
   <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
-    <a href="#" class="w3-bar-item w3-button" style="width:20% !important">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button" style="width:20% !important">ABOUT</a>
-    <a href="#photos" class="w3-bar-item w3-button" style="width:20% !important">LECTURES</a>
-    <a href="#contact" class="w3-bar-item w3-button" style="width:20% !important">NOTICE</a>
+    <a href="{{ url_for('index') }}" class="w3-bar-item w3-button" style="width:20% !important">ABOUT</a>
+    <a href="{{ url_for('todo') }}" class="w3-bar-item w3-button" style="width:20% !important">TODO</a>
+    <a href="{{ url_for('chat') }}" class="w3-bar-item w3-button" style="width:20% !important">CHAT</a>
+    <a href="{{ url_for('faq') }}" class="w3-bar-item w3-button" style="width:20% !important">FAQ</a>
     <a href="{{ url_for('logout') }}" class="w3-bar-item w3-button" style="width:20% !important">LOGOUT</a>
   </div>
 </div>
@@ -65,8 +68,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small">{{ student_info.get('name') }}</span></h1>
-    <h2> {{ student_info.get('major') }} </h2>
+    <h1 class="w3-jumbo"><span class="">{{ student_info.get('name') }}</span></h1>
+    <h3> {{ student_info.get('major') }} </h3>
     <p> {{ student_info.get('uid') }}</p>
   </header>
 
@@ -75,6 +78,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2 class="w3-text-light-grey">About you</h2>
     <hr style="width:200px" class="w3-opacity">
     <p> 
+      {{ student_info.get('name') }}<br>
       {{ student_info.get('major') }}<br>
       <span>Credits: {{ student_info.get('credits').get('total') }}/{{ student_info.get('credits').get('required') }} {{ '%.2f' % student_info.get('credits').get('ratio') }}%</span><br>
       <span>Major Credits: {{ student_info.get('major_credits').get('total') }}/{{ student_info.get('major_credits').get('required') }} {{ '%.2f' % student_info.get('major_credits').get('ratio') }}%</span><br>
@@ -147,56 +151,15 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   
   <!-- End About Section -->
   </div>
-  
-  <!-- Portfolio Section -->
-  <div class="w3-padding-64 w3-content" id="photos">
-    <h2 class="w3-text-light-grey">To Do</h2>
-    <hr style="width:200px" class="w3-opacity">
 
-    <!-- Grid for photos -->
-    <div class="w3-row-padding" style="margin:0 -16px">
-      <div class="w3-half">
-        <h5>You have 1 lectures to watch</h5>
-        <h5>You have 1 lectures to watch</h5>
-        <h5>You have 1 lectures to watch</h5>
-      </div>
-
-      <div class="w3-half">
-        <h5>You have 1 lectures to watch</h5>
-        <h5>You have 1 lectures to watch</h5>
-        <h5>You have 1 lectures to watch</h5>
-      </div>
-    <!-- End photo grid -->
-    </div>
-  <!-- End Portfolio Section -->
-  </div>
-
-  <!-- Contact Section -->
-  <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
-    <h2 class="w3-text-light-grey">Notice</h2>
-    <hr style="width:200px" class="w3-opacity">
-
-    <p>Click the button below to get a recent news.</p>
-
-    <form action="/action_page.php" target="_blank">
-      <p>
-        <button class="w3-button w3-light-grey w3-padding-large" type="submit">
-          <i class="fa fa-paper-plane"></i> GET NEWS
-        </button>
-      </p>
-    </form>
-  <!-- End Contact Section -->
-  </div>
-  
-    <!-- Footer -->
+ 
+  <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
+    <i class="fa fa-github w3-hover-opacity"></i>
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
-    <p class="w3-medium">Powered by <a href="https://www.choidomin.com" target="_blank" class="w3-hover-text-green">choivadim</a></p>
+    <p class="w3-medium">Made by <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="w3-hover-text-green">TEAM18</a></p>
   <!-- End footer -->
   </footer>
 
