--- a/templates/index.html
+++ b/templates/index.html
@@ -1,170 +1,59 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>KW Helper</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
-.w3-row-padding img {margin-bottom: 12px}
-/* Set the width of the sidebar to 120px */
-.w3-sidebar {width: 120px;background: #222;}
-/* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
-#main {margin-left: 120px}
-/* Remove margins from "page content" on small screens */
-@media only screen and (max-width: 600px) {
-  #main {
-    margin-left: 0;
-  }
-}
-</style>
-</head>
-<body class="w3-black">
+{% extends "base.html" %}
 
-<!-- Icon Bar (Sidebar - hidden on small screens) -->
-<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-  <!-- Avatar image in top left corner -->
-  <img src="{{ photo_url }}" style="width:100%">
-  
-  <a href="{{ url_for('index') }}" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-user w3-xxlarge"></i>
-    <p>ABOUT</p>
-  </a>
-  <a href="{{ url_for('todo') }}" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-tasks w3-xxlarge"></i>
-    <p>TODO</p>
-  </a>
-  <a href="{{ url_for('chat') }}" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-envelope w3-xxlarge"></i>
-    <p>CHAT</p>
-  </a>
-  <a href="{{ url_for('faq') }}" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-question-circle w3-xxlarge"></i>
-    <p>FAQ</p>
-  </a>
-  <a href="{{ url_for('logout') }}" class="w3-bar-item w3-button w3-padding-large w3-hover-black" style="position: absolute; bottom: 0; width: 100%;">
-    <i class="fa fa-sign-out w3-xxlarge"></i>
-    <p>LOGOUT</p>
-  </a>
+{% block title %}KW Helper - About{% endblock %}
 
-  
-</nav>
+{% block header %}{{ student_info.get('name') }}{% endblock %}
 
-<!-- Navbar on small screens (Hidden on medium and large screens) -->
-<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
-  <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
-    <a href="{{ url_for('index') }}" class="w3-bar-item w3-button" style="width:20% !important">ABOUT</a>
-    <a href="{{ url_for('todo') }}" class="w3-bar-item w3-button" style="width:20% !important">TODO</a>
-    <a href="{{ url_for('chat') }}" class="w3-bar-item w3-button" style="width:20% !important">CHAT</a>
-    <a href="{{ url_for('faq') }}" class="w3-bar-item w3-button" style="width:20% !important">FAQ</a>
-    <a href="{{ url_for('logout') }}" class="w3-bar-item w3-button" style="width:20% !important">LOGOUT</a>
-  </div>
-</div>
-
-<!-- Page Content -->
-<div class="w3-padding-large" id="main">
-  <!-- Header/Home -->
-  <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo"><span class="">{{ student_info.get('name') }}</span></h1>
-    <h3> {{ student_info.get('major') }} </h3>
-    <p> {{ student_info.get('uid') }}</p>
-  </header>
-
-  <!-- About Section -->
-  <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
+{% block content %}
+<div class="w3-content w3-justify w3-text-grey" id="about">
     <h2 class="w3-text-light-grey">About you</h2>
     <hr style="width:200px" class="w3-opacity">
     <p> 
-      {{ student_info.get('name') }}<br>
-      {{ student_info.get('major') }}<br>
-      <span>Credits: {{ student_info.get('credits').get('total') }}/{{ student_info.get('credits').get('required') }} {{ '%.2f' % student_info.get('credits').get('ratio') }}%</span><br>
-      <span>Major Credits: {{ student_info.get('major_credits').get('total') }}/{{ student_info.get('major_credits').get('required') }} {{ '%.2f' % student_info.get('major_credits').get('ratio') }}%</span><br>
-      Elective Credits: {{ student_info.get('elective_credits').get('total') }}/{{ student_info.get('elective_credits').get('required') }}<br>
-      Average Score: {{ student_info.get('average_score') }}<br>
-      Credits for each semesters: {{ student_info.get('credits_for_each_semester') }}<br>
-      Major Credits for each semesters: {{ student_info.get('major_credits_for_each_semester') }}<br>
+        {{ student_info.get('uid') }}<br>
+        {{ student_info.get('major') }}<br>
+        <span>Credits: {{ student_info.get('credits').get('total') }}/{{ student_info.get('credits').get('required') }} {{ '%.2f' % student_info.get('credits').get('ratio') }}%</span><br>
+        <span>Major Credits: {{ student_info.get('major_credits').get('total') }}/{{ student_info.get('major_credits').get('required') }} {{ '%.2f' % student_info.get('major_credits').get('ratio') }}%</span><br>
+        Elective Credits: {{ student_info.get('elective_credits').get('total') }}/{{ student_info.get('elective_credits').get('required') }}<br>
+        Average Score: {{ student_info.get('average_score') }}<br>
+        Credits for each semesters: {{ student_info.get('credits_for_each_semester') }}<br>
+        Major Credits for each semesters: {{ student_info.get('major_credits_for_each_semester') }}<br>
     </p>
+    
     <h3 class="w3-padding-16 w3-text-light-grey">My Credits</h3>
     <p class="w3-wide">Full</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px; width:{{ student_info.get('credits', {}).get('ratio', 0) }}%;"></div>
+        <div class="w3-dark-grey" style="height:28px; width:{{ student_info.get('credits', {}).get('ratio', 0) }}%;"></div>
     </div>
     <p class="w3-wide">Major</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:{{ student_info.get('major_credits', {}).get('ratio', 0) }}%"></div>
+        <div class="w3-dark-grey" style="height:28px;width:{{ student_info.get('major_credits', {}).get('ratio', 0) }}%"></div>
     </div>
     <p class="w3-wide">Elective</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:100%"></div>
+        <div class="w3-dark-grey" style="height:28px;width:100%"></div>
     </div><br>
     
     <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">{{ student_info.get('average_score') }}</span><br>
-        Average Score
-      </div>
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">{{ student_info.get('major_credits').get('total') }}</span><br>
-        Major Credits
-      </div>
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">{{ student_info.get('elective_credits').get('total') }}</span><br>
-        Elective Credits
-      </div>
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">{{ student_info.get('credits').get('total') }}</span><br>
-        Full Credits
-      </div>
+        <div class="w3-quarter w3-section">
+            <span class="w3-xlarge">{{ student_info.get('average_score') }}</span><br>
+            Average Score
+        </div>
+        <div class="w3-quarter w3-section">
+            <span class="w3-xlarge">{{ student_info.get('major_credits').get('total') }}</span><br>
+            Major Credits
+        </div>
+        <div class="w3-quarter w3-section">
+            <span class="w3-xlarge">{{ student_info.get('elective_credits').get('total') }}</span><br>
+            Elective Credits
+        </div>
+        <div class="w3-quarter w3-section">
+            <span class="w3-xlarge">{{ student_info.get('credits').get('total') }}</span><br>
+            Full Credits
+        </div>
     </div>
 
     <button class="w3-button w3-light-grey w3-padding-large w3-section">
-      <i class="fa fa-download"></i> Download Full File With My Credits
+        <i class="fa fa-download"></i> Download Full File With My Credits
     </button>
-    
-    <!-- Grid for pricing tables -->
-    <h3 class="w3-padding-16 w3-text-light-grey">Info</h3>
-    <div class="w3-row-padding" style="margin:0 -16px">
-      <div class="w3-half w3-margin-bottom">
-        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-          <li class="w3-dark-grey w3-xlarge w3-padding-32">Before</li>
-          <li class="w3-padding-16">Class 1</li>
-          <li class="w3-padding-16">Class 2</li>
-          <li class="w3-padding-16">Class 3</li>
-          <li class="w3-padding-16">Class 4</li>
-        </ul>
-      </div>
-
-      <div class="w3-half">
-        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
-          <li class="w3-dark-grey w3-xlarge w3-padding-32">After</li>
-          <li class="w3-padding-16">Class 1</li>
-          <li class="w3-padding-16">Class 2</li>
-          <li class="w3-padding-16">Class 3</li>
-          <li class="w3-padding-16">Class 4</li>
-        </ul>
-      </div>
-    <!-- End Grid/Pricing tables -->
-    </div>
-  
-  <!-- End About Section -->
-  </div>
-
- 
-  <!-- Footer -->
-  <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-    <i class="fa fa-github w3-hover-opacity"></i>
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-    <p class="w3-medium">Made by <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="w3-hover-text-green">TEAM18</a></p>
-  <!-- End footer -->
-  </footer>
-
-<!-- END PAGE CONTENT -->
 </div>
-
-</body>
-</html>
+{% endblock %}
